--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,1 +1,15 @@
-d
+name: CD Workflow
+on:
+  workflow_run:
+    workflows: ["CI Workflow"]
+    types:
+      - completed
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      # Add your deployment steps here
