--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,5 +11,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Checkout code
+        run: ls
       
       # Add your deployment steps here
